# dev-python-tensorflow-docker

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.circleci/: config.yml
docker/: Dockerfile.cpu  Dockerfile.gpu
tests/: test_dummy.py
